ファイルの追加

--- a/sass/style.css
+++ b/sass/style.css
@@ -12,7 +12,7 @@ body {
 #header {
   width: 100%;
   min-height: 100vh;
-  background-image: url("/img/mainvisual.jpg");
+  background-image: url("../img/mainvisual.jpg");
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
@@ -81,7 +81,7 @@ body {
   margin-top: 20px;
 }
 #menu .menu-img {
-  background-image: url("/img/menu.jpg");
+  background-image: url("../img/menu.jpg");
   position: relative;
 }
 #menu .menu-content {
@@ -117,7 +117,7 @@ body {
   margin-top: 20px;
 }
 #about .about-img {
-  background-image: url("/img/about.jpg");
+  background-image: url("../img/about.jpg");
   position: relative;
 }
 #about .about-content {
@@ -203,7 +203,7 @@ body {
   margin-top: 20px;
 }
 #location .location-img {
-  background-image: url("/img/location.jpg");
+  background-image: url("../img/location.jpg");
   position: relative;
 }
 #location .item-map {
