--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,7 @@ body {
 #header {
     width: 100%;
     min-height: 100vh;
-    background-image: url("/img/mainvisual.jpg");
+    background-image: url("../img/mainvisual.jpg");
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
@@ -76,7 +76,7 @@ body {
 #menu {
     margin-top: 20px;
     .menu-img {
-        background-image:url("/img/menu.jpg");
+        background-image:url("../img/menu.jpg");
         position: relative;
     }
     .menu-content {
@@ -112,7 +112,7 @@ body {
 #about {
     margin-top: 20px;
     .about-img {
-    background-image: url("/img/about.jpg");
+    background-image: url("../img/about.jpg");
     position: relative;
     }
     .about-content {
@@ -192,7 +192,7 @@ body {
 #location {
     margin-top: 20px;
     .location-img {
-        background-image: url("/img/location.jpg");
+        background-image: url("../img/location.jpg");
         position: relative;
     }
     .item-map {
